# drkonqi-pk-debug-installer

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  Rakefile  Vagrantfile
debian/: changelog  control  copyright  drkonqi-pk-debug-installer.links  rules
integrationtests/: CMakeLists.txt  apt.rb  integration_test.rb  test_helper.rb
integrationtests/provision/: org.freedesktop.packagekit.pkla
po/ar/: drkonqi-pk-debug-installer.po
po/ca/: drkonqi-pk-debug-installer.po
po/ca@valencia/: drkonqi-pk-debug-installer.po
po/cs/: drkonqi-pk-debug-installer.po
po/de/: drkonqi-pk-debug-installer.po
po/el/: drkonqi-pk-debug-installer.po
po/en_GB/: drkonqi-pk-debug-installer.po
po/eo/: drkonqi-pk-debug-installer.po
po/es/: drkonqi-pk-debug-installer.po
po/eu/: drkonqi-pk-debug-installer.po
po/fi/: drkonqi-pk-debug-installer.po
po/fr/: drkonqi-pk-debug-installer.po
po/ga/: drkonqi-pk-debug-installer.po
po/gl/: drkonqi-pk-debug-installer.po
po/he/: drkonqi-pk-debug-installer.po
po/hi/: drkonqi-pk-debug-installer.po
po/it/: drkonqi-pk-debug-installer.po
po/ja/: drkonqi-pk-debug-installer.po
po/ka/: drkonqi-pk-debug-installer.po
po/ko/: drkonqi-pk-debug-installer.po
po/lt/: drkonqi-pk-debug-installer.po
po/nl/: drkonqi-pk-debug-installer.po
po/nn/: drkonqi-pk-debug-installer.po
po/pl/: drkonqi-pk-debug-installer.po
po/pt/: drkonqi-pk-debug-installer.po
po/pt_BR/: drkonqi-pk-debug-installer.po
po/ro/: drkonqi-pk-debug-installer.po
po/sk/: drkonqi-pk-debug-installer.po
po/sl/: drkonqi-pk-debug-installer.po
po/sv/: drkonqi-pk-debug-installer.po
po/tr/: drkonqi-pk-debug-installer.po
po/uk/: drkonqi-pk-debug-installer.po
po/zh_CN/: drkonqi-pk-debug-installer.po
po/zh_TW/: drkonqi-pk-debug-installer.po
src/: BuildConfig.h.cmake  CMakeLists.txt  DebugPackage.cpp  DebugPackage.h  DebugRepoEnabler.cpp  DebugRepoEnabler.h  DebugResolver.cpp  DebugResolver.h  Diagnostic.sh  DiagnosticResolver.cpp  DiagnosticResolver.h  File.cpp  File.h  FileResolver.cpp  FileResolver.h  Installer.cpp  Installer.h  Logger.cpp  Logger.h  Messages.sh  Package.cpp  Package.h  Version.h.cmake  assets.qrc  main.cpp  org.kde.drkonqi-pk-debug-installer.desktop
src/qml/: DebugRepoPage.qml  ErrorPage.qml  FilePage.qml  FilePropertyLabel.qml  MainPage.qml  main.qml  qml.qrc
